--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,13 @@ spring.thymeleaf.suffix=.html
 
 
 
+#spring.jpa.hibernate.ddl-auto ??? ???? ??? ??.
+spring.jpa.generate-ddl=true
+#Database ??? ?? (update : ??? ???? Database? ??.)
+spring.jpa.hibernate.ddl-auto=update
+#??? ???? JPA ?? ??? ????? ?????.
+spring.jpa.properties.hibernate.format_sql = true
+# ??? ?? sql? ???.
+spring.jpa.show-sql = true
+# Database ?? ?? (sql ?? ?? ??? Database ?? ?? ????.)
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
